--- a/press/dare-to-face/index.htm
+++ b/press/dare-to-face/index.htm
@@ -161,7 +161,7 @@
                     <div class="uk-width-medium-1-2">
                         <h2 id="contact">Contact</h2>
                         <p><strong>Inquiries</strong>
-                            <br><a href="mailto:nntuyen@gmail.com">nntuyen@gmail.com</a></p>
+                            <br><a href="mailto:nntuyen92@gmail.com">nntuyen92@gmail.com</a></p>
                         <p><strong>Twitter</strong>
                             <br><a href="http://twitter.com/khobeostudios">twitter.com/khobeostudios</a></p>
                         <p><strong>Facebook</strong>
