--- a/games/flappy-helix/index.html
+++ b/games/flappy-helix/index.html
@@ -47,7 +47,7 @@
                     <h1 class="margin-top-0 text-primary">Flappy Helix</h1>
                     <br>
 
-                    <iframe width="840" height="472" src="https://www.youtube.com/watch?v=aBjecA2842Q" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="840" height="472" src="https://www.youtube.com/embed/aBjecA2842Q" frameborder="0" allowfullscreen></iframe>
 
                     <div class="download">
                         <a target="_blank" href="https://itunes.apple.com/us/app/flappy-helix/id1372548445?ls=1&mt=8" class="btn-app">
@@ -68,7 +68,13 @@
             <div class="row">
                 <div class="text-center">
                     <p>
-                        Flappy Helix
+                        The helix dodging challenge and addictive gameplay mechanics!
+
+Easy one tap controls.
+
+Flap through the helix, get stars, beat your own score and play more to unlock new worlds and characters.
+
+Can you be a flappy master?
                     </p>
                 </div>
             </div>
