--- a/press/flappy-helix/index.htm
+++ b/press/flappy-helix/index.htm
@@ -80,8 +80,7 @@
                             <table>
                                 <tbody>
                                     <tr>
-                                        <td>USD</td>
-                                        <td>$0.99</td>
+                                        FREE
                                     </tr>
                                 </tbody>
                             </table>
@@ -92,7 +91,13 @@
                     <div class="uk-width-medium-4-6">
                         <h2 id="description">Description</h2>
                         <p>
-                            Flappy Helix
+                            The helix dodging challenge and addictive gameplay mechanics!
+
+Easy one tap controls.
+
+Flap through the helix, get stars, beat your own score and play more to unlock new worlds and characters.
+
+Can you be a flappy master?
                         </p>
 
                         <h2 id="history">History</h2>
@@ -115,10 +120,10 @@
 
                 <h2 id="videos">Videos</h2>
                 <p>
-                    <strong>Trailer</strong> <a href="https://www.youtube.com/watch?v=04uX8hfTvzU">Youtube</a>
+                    <strong>Trailer</strong> <a href="https://www.youtube.com/watch?v=aBjecA2842Q">Youtube</a>
 
                     <div class="uk-reponseive-width iframe-container">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/04uX8hfTvzU" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/aBjecA2842Q" frameborder="0" allowfullscreen></iframe>
                     </div>
                 </p>
                 <hr>
