--- a/press/index.htm
+++ b/press/index.htm
@@ -79,6 +79,7 @@
                             <br><a href="//khobeostudios.com/press/dare-to-face">Dare To Face</a>
                             <br><a href="//khobeostudios.com/press/formation">Formation Puzzle</a>
                             <br><a href="//khobeostudios.com/press/vegan-dino">Vegan Dino T-Rex</a>
+                            <br><a href="//khobeostudios.com/press/flappy-helix">Flappy Helix</a>
                             <br> 
                         </p>
                         <p> </p>
@@ -99,6 +100,7 @@
                             <li><a href="//khobeostudios.com/press/dare-to-face">Dare To Face</a></li>
                             <li><a href="//khobeostudios.com/press/formation">Formation Puzzle</a></li>
                             <li><a href="//khobeostudios.com/press/vegan-dino">Vegan Dino T-Rex</a></li>
+                            <li><a href="//khobeostudios.com/press/flappy-helix">Flappy Helix</a></li>
                         </ul>
                     </div>
                 </div>
