--- a/press/vegan-dino/index.htm
+++ b/press/vegan-dino/index.htm
@@ -80,8 +80,7 @@
                             <table>
                                 <tbody>
                                     <tr>
-                                        <td>USD</td>
-                                        <td>$0.99</td>
+                                        FREE
                                     </tr>
                                 </tbody>
                             </table>
