--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="clearfix"></div>
             <h2 class="section-heading"><a href="//khobeostudios.com/games/flappy-helix">Flappy Helix</a></h2>
 
-            <a href="//khobeostudios.com/games/dare-to-face">
+            <a href="//khobeostudios.com/games/flappy-helix">
               <img class="app-logo" src="./press/flappy-helix/resources/logo.png" alt="Flappy Helix">
             </a>
 
@@ -89,7 +89,7 @@
             <div class="clearfix"></div>
             <h2 class="section-heading"><a href="//khobeostudios.com/games/vegan-dino">Vegan Dino T-Rex</a></h2>
 
-            <a href="//khobeostudios.com/games/dare-to-face">
+            <a href="//khobeostudios.com/games/vegan-dino">
               <img class="app-logo" src="./press/vegan-dino/resources/logo.png" alt="Vegan Dino T-Rex">
             </a>
 
